--- a/Estilos/index.css
+++ b/Estilos/index.css
@@ -226,11 +226,27 @@ div.peca_home:hover > .exibicao_hover_pecas {
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  .exibicao_hover_pecas {
+    display: block;
+  }
   div.peca_home {
     box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
   }
-  div#pecas_home_container {
-    top: 25%;
+  form#pecas_home_container {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5%;
+  }
+  /* Seletor das peças em conjunto */
+  div.peca_home {
+    width: 28%;
+    height: 50%;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 768px) {
