--- a/Estilos/areaUsuario.css
+++ b/Estilos/areaUsuario.css
@@ -409,19 +409,126 @@ main {
   top: 50%;
   left: 50%;
 }
-@media screen and (min-width: 320px) and (max-width: 768px)  { 
+@media screen and (max-width: 320px) { 
   header > a > img {
-    position: absolute;
-    top: 50%;
-    height: 66px;
-    width: 80px;
+    height: 53px;
+    width: 60px;
   }
   #nav_opcoes_usuario {
-    top: 38%;
+    top: 35%;
+  }
+  #nav_opcoes_usuario ul { 
+    flex-wrap: wrap;
+    align-content: flex-start;
   }
   #nav_opcoes_usuario li {
-    font-size: 1.5rem;
+    font-size: .8rem;
+    width: 86%;
+  }
+  #conteudo_opcoes_usuario { 
+    text-align: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+  #nome_usuario {
+    font-size: 2.8rem;
+  }
+  /* Foto do usuário */
+  #foto_usuario {
+    width: 95px;
+    height: 95px;
+  }
+  /* Caixa para enviar imagem do usuario*/
+  #caixa_arquivo_input {
+    font-size: .6rem;
+    width: 100px;
+    height: 25px;
+  }
+  #conteudo_opcoes_usuario {
+    top: 39%;
+  }
+
+  #header_conteudo_usuario {
+    height: 8%;
+  }
+  #header_conteudo_usuario > p {
+    font-size: 150%;
+  }
+  #container_conteudo > form {
+    top: 5%;
+  }
+  #container_data1 {
+    width: 50%;
+    height: 6%;
+  }
+  #container_data1 label {
+    font-size: 0.8rem;
+    cursor: pointer;
+  }
+  #container_data2 {
+    font-size: 0.8rem;
+    width: 99%;
+    height: 6%;
+  }
+  select { 
     width: 80%;
+  }
+  #container_data3 {
+    width: 99%;
+    height: 6%;
+  }
+  form > p {
+    font-size: 1.1rem;
+  }
+  .input_parceiro { 
+    background-color: rgb(116, 41, 202);
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    font-weight: 600;
+    text-indent: 1%;
+  }
+  #container_data4 {
+    width: 99%;
+    height: 6%;
+  }
+  #container_data4 input {
+    margin: 0px 10px 0px 10px;
+    position: relative;
+  }
+  textarea {
+    width: 99%;
+    height: 65%;
+  }
+  .botaofimorcamento {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 321px) and (max-width: 768px)  { 
+  header > a > img {
+    height: 66px;
+    width: 73px;
+  }
+  #nav_opcoes_usuario {
+    top: 35%;
+  }
+  select { 
+    width: 80%;
+  }
+  #nav_opcoes_usuario ul { 
+    flex-wrap: wrap;
+    align-content: flex-start;
+  }
+  #nav_opcoes_usuario li {
+    font-size: 1rem;
+    width: 88%;
+  }
+  #conteudo_opcoes_usuario { 
+    text-align: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+  #nome_usuario {
+    font-size: 3.4rem;
   }
   li#optorcamento {
     background-image: linear-gradient(
@@ -433,13 +540,14 @@ main {
   }
   /* Foto do usuário */
   #foto_usuario {
-    width: 150px;
-    height: 150px;
+    width: 115px;
+    height: 115px;
   }
   /* Caixa para enviar imagem do usuario*/
   #caixa_arquivo_input {
-    width: 110px;
-    height: 50px;
+    font-size: .6rem;
+    width: 120px;
+    height: 25px;
   }
   #conteudo_opcoes_usuario {
     top: 39%;
@@ -466,9 +574,7 @@ main {
     width: 90%;
     height: 7%;
   }
-  #nome_usuario {
-    font-size: 2.5rem;
-  }
+ 
   #container_data3 {
     width: 90%;
     height: 7%;
