minificando arquivos, alterando ALT das imagens e estrutura padrão geral do sistema

--- a/Estilos/artista.css
+++ b/Estilos/artista.css
@@ -1,146 +1,1 @@
-/* Container que abrange o conteudo */
-
-#flex-container {
-  position: relative;
-  top: 1%;
-  display: flex;
-  flex-direction: column;
-  gap: 3%;
-  height: 2800px;
-}
-/* Imagem do autor */
-.autor-identificação > img {
-  border-radius: 50%;
-}
-/* Seletor das caixas dentro do container*/
-#flex-container > div {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  filter: grayscale(50%) brightness(90%);
-  border-radius: 10px;
-  border: 2px solid rgb(0, 0, 0);
-  box-shadow: 0px 6px 13px rgba(0, 0, 0, 0.5);
-  position: relative;
-  left: 50%;
-  transform: translate(-50%);
-  width: 95%;
-  height: 25%;
-  overflow-y: auto;
-  text-overflow: ellipsis;
-}
-#flex-container > div:hover {
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
-  filter: grayscale(40%) brightness(80%);
-}
-/* Nome do autor */
-.autor-identificação {
-  position: fixed;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
-  background-image: linear-gradient(
-    to right,
-    rgba(100, 0, 218, 0.98),
-    rgba(103, 0, 248, 0.95),
-    rgba(100, 0, 218, 0.98)
-  );
-  width: 100%;
-}
-/* Texto do artista*/
-#flex-container > div > .texto-artista > p {
-  position: relative;
-  bottom: 0%;
-  font-size: 220%;
-  letter-spacing: 1px;
-  font-weight: 500;
-  text-shadow: 1px 1px 2px black;
-  background-color: rgba(0, 0, 0, 0.938);
-}
-.texto-artista {
-  position: absolute;
-  height: 20%;
-  bottom: 0;
-}
-#nav_aberta {
-  gap: 1.5%;
-}
-/* Imagem do artista */
-.imagem_do_artista {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border: 2px solid white;
-  background-color: black;
-  height: 58%;
-  width: 80%;
-}
-.imagem_exibição_nav {
-  margin: 0px 10px 0px 10px;
-  flex-shrink: 0;
-  flex-grow: 1;
-  position: relative;
-  border: 2px solid white;
-  margin-left: 1.5%;
-  border-radius: 10px;
-  width: 179px;
-  height: 95%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.705);
-  font-family: arial;
-  filter: opacity(150%) grayscale(30%);
-  transition-duration: 0.5s;
-  transition-timing-function: ease;
-  transition-property: scale;
-}
-.imagem_exibição_nav:hover {
-  scale: 102%;
-  box-shadow: 0px 0px 5px rgb(255, 255, 255);
-  filter: opacity(100%) grayscale(0%);
-}
-.escrita_exibição_imagem_nav {
-  text-shadow: 0px 0px 10px black;
-  text-align: center;
-  position: relative;
-  width: 100%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%);
-}
-
-.escrita_exibição_imagem_nav h1,
-p {
-  margin: 2px 0px 0px 0px;
-}
-.escrita_exibição_imagem_nav h1 {
-  background-color: rgba(0, 0, 0, 0.2);
-  font-size: clamp(1.5em, 1em + 1vw, 2em);
-}
-.escrita_exibição_imagem_nav p {
-  background-color: rgba(0, 0, 0, 0.5);
-  font-size: clamp(1em, 0.5em + 0.5vw, 1.2em);
-}
-@media screen and (max-width: 320px) { 
-  #flex-container > div > .texto-artista > p {
-    font-size: 93.5%;
-  }
-  .imagem_do_artista {
-    height: 30%;
-    width: 95%;
-  }
-}
-@media screen and (min-width: 321px) and (max-width: 768px) { 
-  #flex-container > div > .texto-artista > p {
-    font-size: 105%;
-  }
-  .imagem_do_artista {
-    height: 30%;
-    width: 95%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1024px) { 
-  #flex-container > div > .texto-artista > p {
-    font-size: 166%;
-  }
-}
+#flex-container{position:relative;top:1%;display:flex;flex-direction:column;gap:3%;height:2800px}.autor-identificação>img{border-radius:50%}#flex-container>div{background-repeat:no-repeat;background-size:cover;background-attachment:fixed;filter:grayscale(50%) brightness(90%);border-radius:10px;border:2px solid rgb(0,0,0);box-shadow:0 6px 13px rgba(0,0,0,.5);position:relative;left:50%;transform:translate(-50%);width:95%;height:25%;overflow-y:auto;text-overflow:ellipsis}#flex-container>div:hover{box-shadow:0 5px 15px rgba(0,0,0,.5);filter:grayscale(40%) brightness(80%)}.autor-identificação{position:fixed;box-shadow:0 1px 5px rgba(0,0,0,.5);background-image:linear-gradient(to right,rgba(100,0,218,.98),rgba(103,0,248,.95),rgba(100,0,218,.98));width:100%}#flex-container>div>.texto-artista>p{position:relative;bottom:0%;font-size:220%;letter-spacing:1px;font-weight:500;text-shadow:1px 1px 2px #000;background-color:rgba(0,0,0,.938)}.texto-artista{position:absolute;height:20%;bottom:0}#nav_aberta{gap:1.5%}.imagem_do_artista{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);border:2px solid #fff;background-color:#000;height:58%;width:80%}.imagem_exibição_nav{margin:0 10px 0 10px;flex-shrink:0;flex-grow:1;position:relative;border:2px solid #fff;margin-left:1.5%;border-radius:10px;width:179px;height:95%;background-repeat:no-repeat;background-size:cover;background-position:center;box-shadow:5px 5px 10px rgba(0,0,0,.705);font-family:arial;filter:opacity(150%) grayscale(30%);transition-duration:0.5s;transition-timing-function:ease;transition-property:scale}.imagem_exibição_nav:hover{scale:102%;box-shadow:0 0 5px rgb(255,255,255);filter:opacity(100%) grayscale(0%)}.escrita_exibição_imagem_nav{text-shadow:0 0 10px #000;text-align:center;position:relative;width:100%;top:50%;left:50%;transform:translate(-50%)}.escrita_exibição_imagem_nav h1,p{margin:2px 0 0 0}.escrita_exibição_imagem_nav h1{background-color:rgba(0,0,0,.2);font-size:clamp(1.5em,1em+1vw,2em)}.escrita_exibição_imagem_nav p{background-color:rgba(0,0,0,.5);font-size:clamp(1em,0.5em+0.5vw,1.2em)}@media screen and (max-width:320px){#flex-container>div>.texto-artista>p{font-size:93.5%}.imagem_do_artista{height:30%;width:95%}}@media screen and (min-width:321px) and (max-width:768px){#flex-container>div>.texto-artista>p{font-size:105%}.imagem_do_artista{height:30%;width:95%}}@media screen and (min-width:768px) and (max-width:1024px){#flex-container>div>.texto-artista>p{font-size:166%}}
