--- a/Estilos/carrinho.css
+++ b/Estilos/carrinho.css
@@ -1,251 +1,1 @@
-body {
-  overflow: hidden;
-}
-main { 
-  overflow: hidden;
-}
-header {
-  height: 10%;
-}
-.links_acesso {
-  top: 50%;
-}
-.links_acesso img {
-  height: 55px;
-  width: 55px;
-}
-header > a > img {
-  position: absolute;
-  top: 50%;
-  height: 76px;
-  width: 90px;
-}
-/*container que abrange a caixa onde estão posicionados os itens do carrinho */
-#container_itens_carrinho {
-  position: relative;
-  top: 54.5%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-image: linear-gradient(
-    to right,
-    rgb(60, 0, 109),
-    rgba(60, 0, 109, 0.918),
-    rgb(60, 0, 109)
-  );
-  height: 80%;
-  width: 50%;
-  box-shadow: 0px 0px 10px black;
-  border: 1px solid black;
-  border-radius: 15px 15px 15px 15px;
-  
-}
-
-#header_itens {
-  position: relative;
-  height: 10%;
-  font-size: 1.5rem;
-  text-shadow: -1px 4px 3px black;
-  background-image: linear-gradient(
-    to right,
-    rgb(131, 18, 224),
-    rgba(127, 22, 207, 0.98),
-    rgb(131, 18, 224)
-  );
-  width: 100%;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.459);
-  border-radius: 15px 15px 0px 0px;
-}
-
-#extrato_final {
-  position: fixed;
-  bottom: 0%;
-  left: 0%;
-  background-image: linear-gradient(
-    to right,
-    rgb(131, 18, 224),
-    rgba(127, 22, 207, 0.98),
-    rgb(131, 18, 224)
-  );
-  width: 100%;
-  height: 14%;
-  border-radius: 0px 0px 15px 15px;
-}
-#extrato_final > div {
-  width: 100%;
-  font-size: 0.7rem;
-}
-#extrato_final_finalizar > input[type="submit"] {
-  border-radius: 20px;
-  font-size: 1rem;
-  width: 18%;
-  background-color: rgb(9, 172, 9);
-  color: white;
-  text-shadow: -1px 2px 5px rgba(0, 0, 0, 0.76);
-}
-
-.preco_item_valor {
-  color: rgb(17, 216, 17);
-  text-shadow: -1px 0px 3px black;
-}
-#totalpagar {
-  color: rgb(5, 197, 5);
-  text-shadow: -1px 0px 3px black;
-}
-form {
-  display: grid;
-  height: 68%;
-  grid-template-columns: auto auto;
-  justify-items: center;
-
-}
-.blocoitem {
-  width: 100%;
-}
-.blocoitem h1 {
-  font-size: 2.3rem;
-}
-form input,
-select {
-  font-size: 2rem;
-  width: 80%;
-  border-radius: 6px;
-  text-indent: 1%;
-}
-form select,
-input[type="date"] {
-  cursor: pointer;
-}
-@media screen and (min-width: 1024px) and (max-width: 1440px) { 
-  header > a > img {
-    height: 56px;
-    width: 65px;
-  }
-  #container_itens_carrinho {
-    height: 85%;
-    width: 50%;
-  }
-  #header_itens {
-    font-size: 1.5rem;
-  }
-
-  #extrato_final {
-    height: 15%;
-  }
-  #extrato_final > div {
-    font-size: 0.8rem;
-  }
-  #extrato_final_finalizar > input[type="submit"] {
-    font-size: 1rem;
-    width: 20%;
-  }
-  .blocoitem h1 {
-    font-size: 1.8rem;
-  }
-  form input,
-  select {
-    font-size: 1.4rem;
-    width: 70%;
-    border-radius: 6px;
-    text-indent: 1%;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1024px) { 
-  header > a > img {
-    height: 46px;
-    width: 55px;
-  }
-  #container_itens_carrinho {
-    height: 85%;
-    width: 75%;
-  }
-  #header_itens {
-    font-size: 1.1rem;
-  }
-
-  #extrato_final {
-    height: 10%;
-  }
-  #extrato_final > div {
-    font-size: 0.5rem;
-  }
-  #extrato_final_finalizar > input[type="submit"] {
-    position: absolute;
-    font-size: 0.8rem;
-    width: 20%;
-    left: 65%;
-    bottom: 20%;
-  }
-  .blocoitem h1 {
-    font-size: 1.5rem;
-  }
-  form input,
-  select {
-    font-size: 1.4rem;
-    width: 70%;
-    border-radius: 6px;
-    text-indent: 1%;
-  }
-}
-@media screen and (max-width: 320px) { 
-  header > a > img {
-    height: 50px;
-    width: 59px;
-  }
-  #container_itens_carrinho {
-    height: 75%;
-    width: 95%;
-  }
-  #header_itens {
-    font-size: 1.1rem;
-  }
-
-  #extrato_final {
-    height: 15%;
-  }
-  #extrato_final > div {
-    font-size: 0.5rem;
-  }
-  #extrato_final_finalizar > input[type="submit"] {
-    font-size: 0.8rem;
-    width: 38%;
-  }
-  .blocoitem h1 {
-    font-size: 1rem;
-  }
-  form input,
-  select {
-    font-size: 0.8rem;
-    width: 95%;
-  }
-}
-@media screen and (min-width: 321px) and (max-width: 768px)  { 
-  header > a > img {
-    height: 60px;
-    width: 69px;
-  }
-  #container_itens_carrinho {
-    height: 70%;
-    width: 95%;
-  }
-  #header_itens {
-    font-size: 1.2rem;
-  }
-
-  #extrato_final {
-    height: 15%;
-  }
-  #extrato_final > div {
-    font-size: 0.8rem;
-  }
-  #extrato_final_finalizar > input[type="submit"] {
-    width: 35%;
-  }
-  .blocoitem h1 {
-    font-size: 1.3rem;
-  }
-  form input,
-  select {
-    font-size: 1rem;
-    width: 90%;
-  }
-}
+body{overflow:hidden}main{overflow:hidden}header{height:10%}.links_acesso{top:50%}.links_acesso img{height:55px;width:55px}header>a>img{position:absolute;top:50%;height:76px;width:90px}#container_itens_carrinho{position:relative;top:54.5%;left:50%;transform:translate(-50%,-50%);background-image:linear-gradient(to right,rgb(60,0,109),rgba(60,0,109,.918),rgb(60,0,109));height:80%;width:50%;box-shadow:0 0 10px #000;border:1px solid #000;border-radius:15px 15px 15px 15px}#header_itens{position:relative;height:10%;font-size:1.5rem;text-shadow:-1px 4px 3px #000;background-image:linear-gradient(to right,rgb(131,18,224),rgba(127,22,207,.98),rgb(131,18,224));width:100%;box-shadow:0 3px 5px rgba(0,0,0,.459);border-radius:15px 15px 0 0}#extrato_final{position:fixed;bottom:0%;left:0%;background-image:linear-gradient(to right,rgb(131,18,224),rgba(127,22,207,.98),rgb(131,18,224));width:100%;height:14%;border-radius:0 0 15px 15px}#extrato_final>div{width:100%;font-size:.7rem}#extrato_final_finalizar>input[type="submit"]{border-radius:20px;font-size:1rem;width:18%;background-color:rgb(9,172,9);color:#fff;text-shadow:-1px 2px 5px rgba(0,0,0,.76)}.preco_item_valor{color:rgb(17,216,17);text-shadow:-1px 0 3px #000}#totalpagar{color:rgb(5,197,5);text-shadow:-1px 0 3px #000}form{display:grid;height:68%;grid-template-columns:auto auto;justify-items:center}.blocoitem{width:100%}.blocoitem h1{font-size:2.3rem}form input,select{font-size:2rem;width:80%;border-radius:6px;text-indent:1%}form select,input[type="date"]{cursor:pointer}@media screen and (min-width:1024px) and (max-width:1440px){header>a>img{height:56px;width:65px}#container_itens_carrinho{height:85%;width:50%}#header_itens{font-size:1.5rem}#extrato_final{height:15%}#extrato_final>div{font-size:.8rem}#extrato_final_finalizar>input[type="submit"]{font-size:1rem;width:20%}.blocoitem h1{font-size:1.8rem}form input,select{font-size:1.4rem;width:70%;border-radius:6px;text-indent:1%}}@media screen and (min-width:768px) and (max-width:1024px){header>a>img{height:46px;width:55px}#container_itens_carrinho{height:85%;width:75%}#header_itens{font-size:1.1rem}#extrato_final{height:10%}#extrato_final>div{font-size:.5rem}#extrato_final_finalizar>input[type="submit"]{position:absolute;font-size:.8rem;width:20%;left:65%;bottom:20%}.blocoitem h1{font-size:1.5rem}form input,select{font-size:1.4rem;width:70%;border-radius:6px;text-indent:1%}}@media screen and (max-width:320px){header>a>img{height:50px;width:59px}#container_itens_carrinho{height:75%;width:95%}#header_itens{font-size:1.1rem}#extrato_final{height:15%}#extrato_final>div{font-size:.5rem}#extrato_final_finalizar>input[type="submit"]{font-size:.8rem;width:38%}.blocoitem h1{font-size:1rem}form input,select{font-size:.8rem;width:95%}}@media screen and (min-width:321px) and (max-width:768px){header>a>img{height:60px;width:69px}#container_itens_carrinho{height:70%;width:95%}#header_itens{font-size:1.2rem}#extrato_final{height:15%}#extrato_final>div{font-size:.8rem}#extrato_final_finalizar>input[type="submit"]{width:35%}.blocoitem h1{font-size:1.3rem}form input,select{font-size:1rem;width:90%}}
